# fractal_renderer

./: .gitignore  Cargo.toml  README.md  frames.toml  properties.toml
src/: app.rs  colorgrad_helpers.rs  fractal_config.rs  fractal_function_type.rs  fractals.rs  frame_meta.rs  frame_renderer.rs  gui.rs  interpolation.rs  lib.rs  main.rs  mandelbrot.rs  mp4.rs  snapshot.rs  text_section.rs  transition.rs  video_frames.rs  wgpu_context.rs
src/shaders/: mandelbrot.wgsl  shader.wgsl
