[package]
name = "fractal_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
colorgrad = "0.6.2"
image = "0.25.1"
indicatif = "0.17.8"
rayon = "1.5"
ndarray = {version="0.15.6", features=["rayon"]}
video-rs = { version = "0.8", features = ["ndarray"] }
interpolation = "0.3.0"
toml = "0.8.15"
serde = { version = "1.0", features = ["derive"] }
winit = { version = "0.29", features = ["rwh_05"] }
wgpu = "22.0"
pollster = "0.3"
encase = "0.10.0"
wgpu_text = "0.9.0"
